# ICT3214-Sec-Analytics

./: .gitignore  Adversary_Attribution_Report.docx  README.md  app.py  cleaned_report_template.docx  common_flow.py  enterprise-attack-v17.1-mitigations_mappings.csv  extract_mitigations.py  extract_mitigations_enhanced.py  inputted_ttps.csv  inputted_ttps_roberta.csv  inputted_ttps_rule.csv  matched_groups_roberta.csv  matched_groups_rule.csv  matched_top3_roberta.csv  matched_top3_rule.csv  matching.py  matching_test.py  mitigations.py  mitigations_roberta_top.csv  mitigations_rule_top.csv  project_paths.py  pyproject.toml  report_generator.py  report_generator_roberta.py  report_template.docx  requirements.txt  roberta_flow.py  rules_flow.py  technique_labels.py  techniques_mapping.csv  test_api.py  test_openAI.py  test_openAI3.py
Archive/: app.py  extract_mitigations.py  gen_rules_from_stix.py  matching_test.py  report_generator copy.py  report_generator_roberta.py  test_api.py  test_openAI.py  test_openAI2.py
Data/: extract_pdfs.py  map_iocs_to_attack.py
Data/mapped/: Ahnlab-Dalbit-m00nlight-Chinese-APT-Campaign-02-13-2023-f8464b2e-bundle.json  Ahnlab-Lazarus-using-public-certificate-vulnerability-02-27-2023-9f0ac45d-bundle.json  Blackberry-AeroBlade-Targeting-US-Aerospace-Industry-11-30-2023-ef854d3a-bundle.json  (+16 more)
app/: main.py
logs/: dataset.csv  labels.txt  main_data.py  map_iocs_to_attack.py  train_roberta_1.py
templates/: 0_index.html  cleaned_report_template.docx  error.html  index.html  results.html  results_compare.html  workflow.html
(+71 files in other folders)
